syntax = "proto2";

message BaseRequest {
    enum RequestType { 
        InitRequest = 0; 
        LoginRequest = 1; 
    }

    required RequestType requestType = 1;
    required string version = 2;

    extensions 10 to max; 
}

message InitRequest {
    extend BaseRequest {
        optional InitRequest request = 10;
    }
    required int32 appType = 1;
}

message LoginRequest {

    extend BaseRequest {
        optional LoginRequest request = 11;
    }
    required string userName = 1; 
    required string password = 2; 
}

message BaseResponse {

    enum ResponseType { 
        InitResponse = 0; 
        LoginResponse = 1; 
    }

    required ResponseType responseType = 1; 
    required int32 code = 2; 
    required string msg = 3; 
     
    extensions 10 to max; 
}

message InitResponse {

    extend BaseResponse {
        optional InitResponse response = 10;
    }
    message Result {
    }
    optional Result result = 1;
}

message LoginResponse {

    extend BaseResponse {
        optional LoginResponse response = 11;
    }
    message Result {
        message UserInfo {
            optional string realName = 1;
            optional string token = 2; 
        }
        optional UserInfo userInfo = 1;
    }
    optional Result result = 1;
}
